# partage4xmg

./: .gitignore  LICENSE  README.md  french-tag.cabal  partage4xmg.cabal  stack.yaml
experiments/: README.md
experiments/plTAG/: mwes.xml
experiments/weights/: frenchtag1.xml  input.txt
src/: automat.hs  base-line.hs  baseline-automat.hs  baseline.hs  parse-grammar.hs  share.hs  tree-set.hs
src/NLP/FrenchTAG/: Automat.hs  Build.hs  Gen.hs  GenLex.hs  Gram.hs  Parse.hs  ParseLex.hs  Select.hs  Stats.hs
src/NLP/Partage4Xmg/: Automat.hs  Build.hs  Ensemble.hs  Ensemble2.hs  Gen.hs  GenLex.hs  Gram.hs  Grammar.hs  Lexicon.hs  Morph.hs  Parse.hs  ParseLex.hs  Select.hs  Stats.hs
src/NLP/Partage4Xmg/Ensemble/: Common.hs  TopBot.hs
tools/: french-tag.hs  parse-skladnica-conll.hs  partage4xmg.hs  run-parse-skladnica-conll.sh
