name:               french-tag
version:            0.1
synopsis:           Experiments with FrenchTAG
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2015 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/french-tag
build-type:         Simple


library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , partage             >= 0.1      && < 0.2
      , polysoup            >= 0.6      && < 0.7
      , tagsoup             >= 0.13     && < 0.14
      , containers          >= 0.4      && < 0.6
      , text                >= 1.1      && < 1.3
      , dawg-ord            >= 0.5      && < 0.6
      , mtl                 >= 2.1      && < 2.3
      , pipes               >= 4.1      && < 4.2
      , random              >= 1.0      && < 2.0
      , hashable            >= 1.2      && < 1.3
      , data-memocombinators    >= 0.5  && < 0.6

    exposed-modules:
        NLP.FrenchTAG.Parse
      , NLP.FrenchTAG.Gen
      -- , NLP.FrenchTAG.GenLex
      , NLP.FrenchTAG.Stats
      , NLP.FrenchTAG.Select
      , NLP.FrenchTAG.Build
      , NLP.FrenchTAG.ParseLex

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/french-tag.git


executable french-tag
    default-language:
        Haskell2010
    build-depends:
        french-tag
      , base                    >= 4        && < 5
      , optparse-applicative    >= 0.12     && < 0.13
    hs-source-dirs: tools
    main-is: french-tag.hs
    ghc-options: -Wall -O2 -threaded -rtsopts
