name:               partage4xmg
version:            0.2
synopsis:           Partage-based parsing for XMG grammars
description:
    The package provides a command-line tool for parsing with grammars
    obtained from XMG. Internally it uses the partage library.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2015 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/partage4xmg
build-type:         Simple


library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , partage             >= 0.2      && < 0.3
      , polysoup            >= 0.6      && < 0.7
      , tagsoup             >= 0.13     && < 0.14
      , containers          >= 0.4      && < 0.6
      , text                >= 1.1      && < 1.3
      , dawg-ord            >= 0.5      && < 0.6
      , mtl                 >= 2.1      && < 2.3
      , pipes               >= 4.1      && < 4.2
      , random              >= 1.0      && < 2.0
      , hashable            >= 1.2      && < 1.3
      , data-memocombinators    >= 0.5  && < 0.6

    exposed-modules:
        NLP.Partage4Xmg.Parse
      , NLP.Partage4Xmg.Gen
      -- , NLP.Partage4Xmg.GenLex
      , NLP.Partage4Xmg.Stats
      , NLP.Partage4Xmg.Select
      , NLP.Partage4Xmg.Build
      , NLP.Partage4Xmg.ParseLex

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/partage4xmg.git


executable partage4xmg
    default-language:
        Haskell2010
    build-depends:
        partage4xmg
      , base                    >= 4        && < 5
      , optparse-applicative    >= 0.12     && < 0.13
    hs-source-dirs: tools
    main-is: partage4xmg.hs
    ghc-options: -Wall -O2 -threaded -rtsopts
